add tests for PropertyService,PropertyController,PropertyImageService